--- a/app/src/main/res/layout/slot_item_layout.xml
+++ b/app/src/main/res/layout/slot_item_layout.xml
@@ -3,7 +3,8 @@
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="fill_parent"
 	android:layout_height="wrap_content"
-	android:orientation="vertical">
+	android:orientation="vertical"
+	android:background="@color/colorPrimary">
 	
 	<ImageView android:id="@+id/itemImage"
 	   android:layout_width="85dp"
